--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
+    <!-- tipo de letra -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>NucbaZappi</title>
 </head>
 <body>
@@ -19,13 +23,13 @@
                 <div class="hero-info">
                     <h2>tenes Nucba.</h2>
                     <p>Busca lo que quieras, <span>Nucba</span> te quedes sin comida</p>
+                    <a href="#">VER MAS</a>
                 </div>
-            <a href="#">VER MAS</a>
     </div>
-    <img src="./assets/img/image 34.png" alt="pizza">
-    <img src="./assets/img/pizza 1.png" alt="pizza1">
-   
-
+        <div class="hero-img">
+            <img class="hero-pizza" src="./assets/img/image 34.png" alt="pizza">
+            <img  class="hero-pizza1" src="./assets/img/pizza 1.png" alt="pizza1">
+        </div>
     </section>
 </main>
     
