--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           />
         </div>
       </section>
-      <!--cateorías-->
+      <!--categorías-->
       <section id="categorias">
         <h3>categorías</h3>
         <div class="categories">
