--- a/index.html
+++ b/index.html
@@ -40,6 +40,47 @@
             <img  class="hero-pizza1" src="./assets/img/pizza 1.png" alt="pizza1">
         </div>
     </section>
+    <!-- categorias -->
+    <section id="categorias">
+      <h3>categorías</h3>
+      <div class="categories">
+        <button class="category">
+          <img src="assets/img/image 34.png" alt="Pizzas" />
+          <p>Pizzas</p>
+          <a href="#"></a>
+        </button>
+        <button class="category">
+          <img src="assets/img/burger 1.png" alt="Hamburguesas" />
+          <p>Hamburguesas</p>
+          <a href="#"></a>
+        </button>
+        <button class="category">
+          <img src="assets/img/fries 2.png" alt="Napapuki" />
+          <p>Napapuki</p>
+          <a href="#"></a>
+        </button>
+        <button class="category">
+          <img src="assets/img/pizza 1.png" alt="Individuales" />
+          <p>Individuales</p>
+          <a href="#"></a>
+        </button>
+        <button class="category">
+          <img src="assets/img/buritto 1.png" alt="Wraps" />
+          <p>Wraps</p>
+          <a href="#"></a>
+        </button>
+        <button class="category">
+          <img src="assets/img/taco 1.png" alt="Mexican Food" />
+          <p>Mexican Food</p>
+          <a href="#"></a>
+        </button>
+        <button class="category">
+          <img src="assets/img/float 1.png" alt="Batidukis" />
+          <p>Batidukis</p>
+          <a href="#"></a>
+        </button>
+      </div>
+    </section>
     
     <!-- populares -->
     <section id="populares">
