--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
     <!-- categorias -->
     <section id="categorias">
-      <h3>categorías</h3>
+      <h3>Categorías</h3>
       <div class="categories">
         <button class="category">
           <img src="assets/img/image 34.png" alt="Pizzas" />
