--- a/index.html
+++ b/index.html
@@ -40,6 +40,50 @@
             <img  class="hero-pizza1" src="./assets/img/pizza 1.png" alt="pizza1">
         </div>
     </section>
+    <!-- recomendados -->
+     <!-- Section -->
+     <section id="recomendaciones">
+      <h2 class="recomendados">Hoy te recomendamos</h2>
+      <!-- CARDS -->
+      <div class="card-padre">
+        <div class="card-recomendaciones">
+          <!-- CARD BENNAZIANNA -->
+          <div class="div-img">
+            <img src="/assets/img/Photo Menu 3.png" alt="fotomenu" />
+          </div>
+          <div class="card-info">
+            <h4>Bennazianna</h4>
+            <p>La mas completa</p>
+            <span>$3650</span>
+          </div>
+          <div class="agregar"><span>Agregar</span></div>
+        </div>
+        <div class="card-recomendaciones">
+          <!-- CARD TRONCO PIZZA -->
+          <div class="div-img">
+            <img src="/assets/img/Photo Menu.png" alt="fotomenu" />
+          </div>
+          <div class="card-info">
+            <h4>Tronco-Pizza</h4>
+            <p>Para todo el dia</p>
+            <span>$870</span>
+          </div>
+          <div class="agregar"><span>Agregar</span></div>
+        </div>
+        <div class="card-recomendaciones">
+          <!-- PAPAS PROVENZAL -->
+          <div class="div-img">
+            <img src="/assets/img/Photo Menu(1).png" alt="fotomenu" />
+          </div>
+          <div class="card-info">
+            <h4>Papas Provenzal</h4>
+            <p>Van como piña</p>
+            <span>$360</span>
+          </div>
+          <div class="agregar"><span>Agregar</span></div>
+        </div>
+      </div>
+    </section>
     <!-- categorias -->
     <section id="categorias">
       <h3>Categorías</h3>
