--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/img/pizza_1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/image34.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/style.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/6c070c2186.js" crossorigin="anonymous"></script>
