--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <a class="nav-links"2 href="#"><i class="fa-solid fa-user"></i></a>
     </nav>
 </header>
+
+<!--
 <main>
     <section id="hero">
         <div class="hero">
@@ -40,9 +42,10 @@
             <img  class="hero-pizza1" src="./assets/img/pizza 1.png" alt="pizza1">
         </div>
     </section>
-    <!-- categorias -->
+    <!-- categorias
     <section id="categorias">
       <h3>Categorías</h3>
+
       <div class="categories">
         <button class="category">
           <img src="assets/img/image 34.png" alt="Pizzas" />
@@ -80,8 +83,9 @@
           <a href="#"></a>
         </button>
       </div>
+
     </section>
-    
+    -->
     <!-- populares -->
     <section id="populares">
 
