--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Si tenes zappi,</h1>
                 <div class="hero-info">
                     <h2>tenes Nucba.</h2>
-                    <p>Busca lo que quieras, <span>Nucba</span> te quedes sin comida</p>
+                    <p>Busca lo que quieras, Nucba te quedes sin comida</p>
                     <a href="#">VER MAS</a>
                 </div>
         </div>
