--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 </header>
 
-<!--
+
 <main>
     <section id="hero">
         <div class="hero">
@@ -42,7 +42,9 @@
             <img  class="hero-pizza1" src="./assets/img/pizza 1.png" alt="pizza1">
         </div>
     </section>
-    <!-- categorias
+   
+    <!-- categorias -->
+
     <section id="categorias">
       <h3>Categorías</h3>
 
@@ -85,7 +87,7 @@
       </div>
 
     </section>
-    -->
+    
     <!-- populares -->
     <section id="populares">
 
